<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Last"
    android:orientation="vertical"
    android:background="@drawable/bgapp">

    <TextView
        android:id="@+id/textScreen"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/youdid"
        android:textColor="#FFF"
        android:textSize="45sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="300dp"
        android:layout_height="300dp">

        <ImageView
            android:id="@+id/staff2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/staff"
            app:srcCompat="@drawable/yay" />


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="80dp"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="100dp">
        <Button
            android:id="@+id/playagain"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/bgpink"
            android:text="@string/goback"
            android:textSize="30dp" />
    </LinearLayout>

</LinearLayout>