<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lvl41"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".level4">

    <Button
        android:id="@+id/B1"
        android:layout_width="59dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="225dp"
        android:layout_marginRight="225dp"
        android:layout_marginBottom="194dp"
        android:background="@drawable/roundedbtn"
        android:text="@string/ltB"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="#00C4AD5B"
        android:textSize="36sp" />

    <Button
        android:id="@+id/C1"
        android:layout_width="59dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="126dp"
        android:layout_marginRight="126dp"
        android:layout_marginBottom="193dp"
        android:background="@drawable/roundedbtn"
        android:text="@string/ltC"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="#00C4AD5B"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/lvl4top"
        android:layout_width="322dp"
        android:layout_height="119dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="550dp"
        android:text="@string/level04q"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorLink="#00A5543F"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/staff1"
        android:layout_width="309dp"
        android:layout_height="158dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:layout_marginBottom="386dp"
        android:contentDescription="TODO"
        android:foreground="@drawable/staff" />


    <Button
        android:id="@+id/A1"
        android:layout_width="59dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="321dp"
        android:layout_marginRight="321dp"
        android:layout_marginBottom="193dp"
        android:background="@drawable/roundedbtn"
        android:onClick="buttonClicked"
        android:text="@string/ltA"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="#00C4AD5B"
        android:textSize="36sp" />

    <Button
        android:id="@+id/G1"
        android:layout_width="59dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginBottom="103dp"
        android:background="@drawable/roundedbtn"
        android:text="@string/ltG"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="#00C4AD5B"
        android:textSize="36sp" />

    <Button
        android:id="@+id/F1"
        android:layout_width="59dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="177dp"
        android:layout_marginRight="177dp"
        android:layout_marginBottom="102dp"
        android:background="@drawable/roundedbtn"
        android:onClick="ShowPopups"
        android:text="@string/ltF"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="#00C4AD5B"
        android:textSize="36sp"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/E1"
        android:layout_width="59dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="280dp"
        android:layout_marginRight="280dp"
        android:layout_marginBottom="103dp"
        android:background="@drawable/roundedbtn"
        android:text="@string/ltE"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="#00C4AD5B"
        android:textSize="36sp" />

    <Button
        android:id="@+id/D1"
        android:layout_width="59dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="194dp"
        android:background="@drawable/roundedbtn"
        android:text="@string/lrD"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="#00C4AD5B"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="223dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="557dp"
        android:text="@string/lvl4tp2"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/ltr4"
        android:layout_width="64dp"
        android:layout_height="83dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="284dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:text="@string/blank"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/ltr3"
        android:layout_width="65dp"
        android:layout_height="84dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="123dp"
        android:layout_marginRight="123dp"
        android:layout_marginBottom="283dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:text="@string/blank"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/ltr2"
        android:layout_width="63dp"
        android:layout_height="85dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="215dp"
        android:layout_marginRight="215dp"
        android:layout_marginBottom="283dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:text="@string/blank"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/firstLtr"
        android:layout_width="62dp"
        android:layout_height="83dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="302dp"
        android:layout_marginRight="302dp"
        android:layout_marginBottom="284dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:text="@string/blank"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp" />

    <Button
        android:id="@+id/homebutton1"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="359dp"
        android:layout_marginRight="359dp"
        android:layout_marginBottom="674dp"
        android:foreground="@drawable/homebtn"
        android:text="@string/blank"
        android:textColorHighlight="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/start01"
        android:layout_width="194dp"
        android:layout_height="62dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="106dp"

        android:layout_marginRight="106dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/startbutton"
        android:text="@string/start"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="113dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:layout_marginBottom="691dp"
        android:text="@string/points"
        android:textColor="@color/start"
        android:textSize="24sp"
        android:textStyle="bold" />


</RelativeLayout>